--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "react-hook-form": "^7.66.1",
     "shadcn": "^3.5.1",
     "sonner": "^2.0.7",
+    "sweetalert2": "^11.26.3",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.13",
     "zustand": "^5.0.8"
   },
