--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
     "lucide-react": "^0.555.0",
-    "next": "16.0.5",
+    "next": "^16.0.7",
     "react": "19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-day-picker": "^9.11.2",
@@ -54,7 +54,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "baseline-browser-mapping": "^2.9.11",
     "eslint": "^9",
-    "eslint-config-next": "16.0.5",
+    "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
